# trajopt_plugin

./: CMakeLists.txt  README.md  package.xml  trajopt_planner_plugin_description.xml
config/: blank.config  kitchen.config  trajopt_planning.yaml  tunnel.config
data/: bookshelves_modified.scene  countertop.queries
include/trajopt_interface_ros/: ros_rave_conversions.h  trajopt_interface_ros.h  trajopt_interface_ros1.h
launch/: benchmark_server.launch  chomp_move_group.launch  chomp_planning_pipeline.launch  dbg_move_group.launch  move_group.launch  my_move_group.launch  my_pipeline.launch  planner_rviz.launch  planning_pipeline.launch  warehouse.launch
src/: check_traj.py  move_group_battery.py  planning_server.py  ros_rave_conversions.cpp  scene2xml.py  test_move_group.py  test_traj.cpp  traj_verifier.cpp  trajopt_interface_ros.cpp  trajopt_interface_ros1.cpp  trajopt_plugin.cpp  warehouse_utils.py
srv/: String2String.srv
